<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/bg_menu_gradient">

    <ImageButton android:id="@+id/btnAyudaPres" android:layout_width="44dp" android:layout_height="44dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_margin="12dp" android:src="@drawable/ayuda"/>
    <ImageView android:id="@+id/btnPerfilPres" android:layout_width="44dp" android:layout_height="44dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_margin="12dp" android:src="@drawable/usuario"/>
    <TextView android:id="@+id/txtTituloPres" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_presupuestos" app:layout_constraintTop_toBottomOf="@id/btnAyudaPres" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView android:id="@+id/tvPresSubtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subtitulo_presupuesto" app:layout_constraintTop_toBottomOf="@id/txtTituloPres" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout android:id="@+id/stepIndicators" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/tvPresSubtitle" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:orientation="horizontal">
        <View android:id="@+id/step1Dot" android:layout_width="10dp" android:layout_height="10dp" android:background="@color/tealAccent"/>
        <View android:id="@+id/step2Dot" android:layout_width="10dp" android:layout_height="10dp" android:layout_marginStart="6dp" android:background="@color/tealAccent"/>
        <View android:id="@+id/step3Dot" android:layout_width="10dp" android:layout_height="10dp" android:layout_marginStart="6dp" android:background="@color/tealAccent"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@id/stepIndicators" app:layout_constraintBottom_toTopOf="@id/bottomBar" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="12dp">
            <com.google.android.material.chip.ChipGroup android:id="@+id/chipGroupCategoriaPres" android:layout_width="match_parent" android:layout_height="wrap_content" app:singleSelection="true">
                <com.google.android.material.chip.Chip android:id="@+id/chipPresAlimentacion" android:text="@string/cat_alimentacion"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresTransporte" android:text="@string/cat_transporte"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresEntretenimiento" android:text="@string/cat_entretenimiento"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresSalud" android:text="@string/cat_salud"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresEducacion" android:text="@string/cat_educacion"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresServicios" android:text="@string/cat_servicios"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresHogar" android:text="@string/cat_hogar"/>
                <com.google.android.material.chip.Chip android:id="@+id/chipPresOtro" android:text="@string/cat_otro"/>
            </com.google.android.material.chip.ChipGroup>
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etMontoMaxPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_monto_maximo"/>
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etMesPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_mes"/>
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etAnioPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_anio"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:id="@+id/btnMonto500" android:text="500" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"/>
                <Button android:id="@+id/btnMonto1000" android:text="1000" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"/>
                <Button android:id="@+id/btnMonto2500" android:text="2500" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"/>
                <Button android:id="@+id/btnMonto5000" android:text="5000" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button android:id="@+id/btnGuardarPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_guardar"/>
            <Button android:id="@+id/btnEliminarPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_eliminar"/>
            <Button android:id="@+id/btnLimpiarPres" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_limpiar"/>
            <TextView android:id="@+id/labelReg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_presupuestos_registrados"/>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvPresupuestos" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <TextView android:id="@+id/tvPresupuestosVacio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_sin_presupuestos"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout android:id="@+id/bottomBar" android:layout_width="0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:orientation="horizontal">
        <ImageButton android:id="@+id/navGastos" android:layout_width="0dp" android:layout_weight="1" android:layout_height="44dp" android:src="@drawable/gastosop2texto2"/>
        <ImageButton android:id="@+id/navIngresos" android:layout_width="0dp" android:layout_weight="1" android:layout_height="44dp" android:src="@drawable/ingresosconletras"/>
        <ImageButton android:id="@+id/navAhorro" android:layout_width="0dp" android:layout_weight="1" android:layout_height="44dp" android:src="@drawable/ahorrotexto2"/>
        <ImageButton android:id="@+id/navGraficas" android:layout_width="0dp" android:layout_weight="1" android:layout_height="44dp" android:src="@drawable/graficastexto2"/>
        <ImageButton android:id="@+id/navMenuMini" android:layout_width="44dp" android:layout_height="44dp" android:src="@drawable/ic_home_filled"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
